--- a/index.html
+++ b/index.html
@@ -20,4 +20,4 @@
 <br/><br/> -->
 <a class="button email" href="mailto:tabocaringin@gmail.com?Subject=Pesanan%20100%20Porsi">tabocaringin@gmail.com</a>
 <br/><br/>
-<a class="button phone" href="https://web.whatsapp.com/send?phone=6281385407950&text=Saya%20mau%20pesan%20100%20Porsi,%20bisa%20tolong%20kirimkan%20pricelist%20Menu%20nya">whatsapp for bulk orders</a>
+<a class="button phone" href="https://wa.me/6281385407950?text=Saya%20mau%20pesan%20100%20Porsi%20bisa%20tolong%20kirimkan%20pricelist%20Menu%20nya">whatsapp for bulk orders</a>
