--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <a class="button arrow" href="https://gofood.link/u/Qd5gRR">Go-Food Fatmawati</a>
 <br/><br/>
-<!-- <a class="button arrow" href="https://gofood.link/u/Qd5gRR">Grab Food Fatmawati</a>
-<br/><br/> -->
+<a class="button arrow" href="https://grab.onelink.me/2695613898?pid=inappsharing&c=6-CZBFJ8EFRYXKVX&is_retargeting=true&af_dp=grab%3A%2F%2Fopen%3FscreenType%3DGRABFOOD%26sourceID%3DA4pcqCZkS4%26merchantIDs%3D6-CZBFJ8EFRYXKVX&af_force_deeplink=true&af_web_dp=https%3A%2F%2Fwww.grab.com%2Fdownload">Grab Food Fatmawati</a>
+<br/><br/>
 <a class="button email" href="mailto:tabocaringin@gmail.com?Subject=Pesanan%20100%20Porsi">tabocaringin@gmail.com</a>
 <br/><br/>
-<a class="button phone" href="https://wa.me/6281385407950?text=Saya%20mau%20pesan%20100%20Porsi%20bisa%20tolong%20kirimkan%20pricelist%20Menu%20nya">Chat Whatsapp</a>
+<a class="button phone" href="https://wa.me/6281385407950?halo">Chat Whatsapp</a>
